--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 <body class="min-h-screen p-10 font-sans">
   <img src="https://assets.zyrosite.com/cdn-cgi/image/format=auto,w=362,fit=crop,q=95/dOqy74DXzWu465Ep/logo-Y4LV8JPV3ZcOG7yL.png" alt="Harmonic Alpha Logo" class="mx-auto mb-8 w-64">
   <h1 class="text-3xl font-bold mb-8 text-center" style="color: #ffffff;">
+AI for Sustainable Efficiency: Saving Energy, Maximizing Output.
     Transform Chaos into Clarity
   </h1>
 
