--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Harmonic Alpha Brochure</title>
+  <title>Harmonic AI Brochure</title>
   <script src="https://cdn.tailwindcss.com"></script>
 
   <style>
@@ -29,7 +29,6 @@
   <img src="https://assets.zyrosite.com/cdn-cgi/image/format=auto,w=362,fit=crop,q=95/dOqy74DXzWu465Ep/logo-Y4LV8JPV3ZcOG7yL.png" alt="Harmonic Alpha Logo" class="mx-auto mb-8 w-64">
   <h1 class="text-3xl font-bold mb-8 text-center" style="color: #ffffff;">
 AI for Sustainable Efficiency: Saving Energy, Maximizing Output.
-    Transform Chaos into Clarity
   </h1>
 
   <div class="bg-red-400 text-white rounded-2xl shadow-lg p-6 mb-8">
